  - Winj/Wext (wellbore positions) are moved from 0/ to constant/

- porousScalarTransportFoam

  - retard coefficient "R" added
  - new time-stepping (using dCmax absolute and relative)

### Libraries

- dispersionModels

  - alphaL/alphaT can be heterogeneous (volScalarField) in the

### Tutorials

- impesFoam/anisoImpesFoam

  - updated (wellboreProperties removed)


************************
*** V1.6.0 (2018-05)
*** New model kr/pc Ippisch-Vogel-Bastian
************************

### Solvers

- groundwaterFoam

  - new time step managing (timeStep in controlDict) :
    - "Picard" is based on the number of Picard's iteration (old method)
    - "dthetadT" is based on the saturation variation at the previous time step 

- darcyFoam

  - moved to utility folder (now compute pressure field in the time folder with
  time iteration)

### Libraries

- capillary and relative permeability model

  - new Ippisch model (example in the tutorials/groundwaterFoam/realCase)

- boundary condtions for Head pressure (currently, gravity should be along the
  Z-axis). Computation are made at each time step, we recommend the use of the
  setBoundaryHeadPressure function

  - fixedHeadPressure : potential can be fixed (h is computed as potential - z
    coordinate of the face)
    if hUnsaturated is given, potential equal to this value in for all faces
    with z > potential.
    else h is computed as for the saturated zone.

  - fixedHeadPressureSTL : potential on the boundary is computed using an STL
  file.

### Utilities

- new folder including utility function for the porousMultiphaseFoam toolbox

  - darcyFoam : It compute pressure and flux field for a given phase at a given
    time (overwriting
    the files in current time step).
    phase used for the computation can be specified with the -phase option ("a"
    by default)

  - setBoundaryHeadPressure : initialize head pressure boundary condition using